--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       </tr>
       <tr>
         <td align="right"><a href="https://docs.microsoft.com/azure/cognitive-services/speech-service/get-started" target="_blank">Subscription</a>:</td>
-        <td><input id="subscriptionKey" type="text" size="40" value="subscription"></td>
+        <td><input id="subscriptionKey" type="text" size="40" value="e23167a7e3be4dcc85a78244bf0aef35"></td>
       </tr>
       <tr>
         <td align="right">Region</td>
-        <td><input id="serviceRegion" type="text" size="40" value="YourServiceRegion"></td>
+        <td><input id="serviceRegion" type="text" size="40" value="centralindia"></td>
       </tr>
       <tr>
         <td></td>
